[package]
name = "{{ project-name }}"
version = "0.1.0"
authors = ["{{ authors }}"]
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = "1.0.0"
rp2040-boot2 = "0.3.0"

[profile.release]
debug = 2
